@@ -210,6 +210,7 @@ $countries["PYF"]="Französisch-Polynesien";
 $countries["QAT"]="Katar";
 $countries["REU"]="Réunion";
 $countries["ROM"]="Rumänien";
+$countries["RSS"]="Süd Sudan";
 $countries["RUS"]="Rußland";
 $countries["RWA"]="Ruanda";
 $countries["SAU"]="Saudi-Arabien";
@@ -229,7 +230,6 @@ $countries["SLV"]="El Salvador";
 $countries["SMR"]="San Marino";
 $countries["SOM"]="Somalia";
 $countries["SPM"]="St. Pierre und Miquelon";
-$countries["SSD"]="Süd Sudan";
 $countries["STP"]="São Tomé und Príncipe";
 $countries["SUN"]="UdSSR";
 $countries["SUR"]="Suriname";
