@@ -244,6 +244,7 @@ $countries["PYF"]="Frans Polynesië";
 $countries["QAT"]="Qatar";
 $countries["REU"]="Réunion";
 $countries["ROM"]="Roemenië";
+$countries["RSS"]="Zuid Soedan";
 $countries["RUS"]="Rusland";
 $countries["RWA"]="Rwanda";
 $countries["SAU"]="Saudi-Arabië";
@@ -264,7 +265,6 @@ $countries["SLV"]="El Salvador";
 $countries["SMR"]="San Marino";
 $countries["SOM"]="Somalië";
 $countries["SPM"]="Saint Pierre en Miquelon";
-$countries["SSD"]="Zuid Soedan";
 $countries["STP"]="São Tomé en Príncipe";
 $countries["SUN"]="USSR";
 $countries["SUR"]="Suriname";
