@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 4.3.0
+ - Changed: Country code for South Sudan changed from SSD to RSS (canajun2eh)
  - Fixed: [ 3571316 ] As of SVN 7075, can't upload any GEDCOMs (canajun2eh)
  - Fixed: [ 3569578 ] PGV not working in PHP 5.4.0 (canajun2eh)
  - Fixed: [ 3532300 ] Can't change ID of existing user (canajun2eh)
